OO-5580: Exclude courses in quality generators by educational types